--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         </div>
         <ul class="menus">
             <li class="menus">
-              <a id="aboutme" href="#" class="aboutme">About me </a>
+              <a  href="#aboutme" class="aboutme">About me </a>
             </li>
              <li class="menus">
-                <a href="#" class="work">work</a>
+                <a href="#work" class="work">work</a>
              </li>
               <li class="menus">
-                <a href="#" class="contactme">Contact Me </a>
+                <a href="#contactme" class="contactme">Contact Me </a>
             </li>
         </ul>
     </nav>
@@ -32,11 +32,11 @@
 </section>
 <div class="aboutme2"></div> 
 About me
-<p class="bio"> 
+<p id="aboutme" class="bio"> 
     My name is Humberto i am 22 and live in the subburbs of philadelpha. I am looking for new career opportunities. currently in route to becoming 
     a junior Developer. I am attending upen bootcamp, and leaning html, css, and javasqript. 
 </p>
-<div class="work2" >
+<div id="work"class="work2" >
     <h2>work</h2>
     <section>
         <img class="workpic" src="https://wallpaperaccess.com/full/17520.jpg" alt="space">
@@ -45,17 +45,16 @@ About me
 <nav class="bottom">
     <div class="h3">
         <h3>contact me</h3>
-    </div class="bottoms2">
+    </div id="aboutme" class="bottoms2">
     <ul class="menus2">
         <li class="menus2">
           <a id="aboutme" href="#" class="phonenumber">4847587844 </a>
         </li>
          <li class="menus2">
-            <a href="#" class="email">email</a>
+            <a  href="humbertorico078@gmail.com">Humbertorico078@gmail.com</a>.<br>
          </li>
           <li class="menus2">
-            <a href="#" class="github">github </a>
-        </li>
+            <a class="github" href="https://github.com/Humbertorico" >github </a>
     </ul>
 </nav>
 </body>
